@@ -3,8 +3,8 @@
 
 	<data>
 		<key>content</key>
-		<version>5.2.1</version>
-        <lastMod>2013-03-15</lastMod>
+		<version>5.2.2</version>
+        <lastMod>2013-05-11</lastMod>
 		<install>YES</install>
 		<name><![CDATA[Contents]]></name>
 	</data>
