@@ -1,1 +1,1 @@
-.clearfix:after{content:".";display:block;clear:both;visibility:hidden;line-height:0;height:0}.clearfix{display:inline-block}html .clearfix{display:block}* html .clearfix{height:1%}#app.data{margin:0}.field-list{margin:0;padding:0;min-height:38px;display:block}.field-list .needToBeFilled label{color:#cf0400}.field-list label{float:left;width:14%;font-weight:bold;text-align:right;line-height:22px}.field-list label a{font-weight:normal;color:#000;text-decoration:none}.field-list .hand{float:left;width:2%;height:11px;visibility:hidden;margin:5px 0 0 0;background:url('../img/item-handle.png') no-repeat 5px -11px;cursor:pointer}.field-list .hand:hover{background:url('../img/item-handle.png') no-repeat 5px 0}.field-list .spacer{float:left;width:4%;height:1px}.field-list .toggle{float:left;margin:5px 0 0 0;width:2%;height:13px;background:url('../img/folder.png') no-repeat 0 -13px;cursor:pointer}.field-list .toggle-hidden{visibility:hidden}.field-list .display-off,.field-list .off{display:none}.field-list input,.field-list textarea{vertical-align:middle}.field-list input[type="text"]{height:18px;padding:0;margin:0 0 1px 0}.field-list select[multiple]{border-color:#ddd}.field-list input[disabled],.field-list textarea[disabled]{opacity:.5}.field-list li{width:100%;padding:7px 0 7px 0;border-bottom:1px solid #969696;background:#f5f5f5}.field-list li.closed .toggle{background:url('../img/folder.png') no-repeat 0 0}.field-list li.closed .form,.field-list li.closed .off,.field-list li.closed .spacer{display:none}.field-list li .off{display:inline}.field-list li .field{padding:2px;border:1px solid #CCC;outline:0}.field-list li .field:focus{border-color:#666}.field-list li:last-child{border-bottom:0}.field-list .form-item i.clear{margin:1px 0 0 3px;cursor:pointer}.field-list .form{float:right;width:81%;margin-right:5px}.field-list .form label{float:none;width:auto;font-weight:normal;text-align:inherit;padding:auto}.field-list .form div.label{padding:5px 0 5px 0}.field-list .form .panelItem:first-child .panelLabel,.field-list .form .panelItem:first-child .panelBody{float:left}.field-list .form .panelItem:last-child .panelLabel,.field-list .form .panelItem:last-child .panelBody{float:right}.field-list .instruction{float:right;width:81%;margin-right:5px;font-style:italic;color:#666}.media-list .media-header{border:1px solid #CCC;border-bottom:0;background:#f0f0ee;padding:5px}.media-list .media-header .left{float:left}.media-list .media-header .right{float:right}.media-list .media-header a{text-decoration:none;color:#515151;cursor:pointer}.media-list .media-footer{border:1px solid #CCC;border-top:0;background:#f0f0ee;padding:5px}.media-list .media-footer .left{float:left}.media-list .media-footer .right{float:right}.media-list .media-footer a{text-decoration:none;color:#515151;cursor:pointer;float:left;margin-top:1px}.media-list .media-footer img{vertical-align:middle;float:left;display:block}.media-list ul{background:#fff;border:1px solid #ccc;padding:5px 0 0 5px;margin:0}.media-list ul li{float:left;width:150px;margin:0 5px 5px 0;padding:0;border:0;background:0}.media-list ul li span.notfound{display:none}.media-list ul li.notFound span.notfound{float:right;width:16px;height:16px;margin-right:10px;background:url('../img/alert-tiny.png') no-repeat 0 0;cursor:pointer}.media-list ul li.noMedia{float:none;width:100%;text-align:center;color:#c8c8c8;font-size:14px;padding:30px 0 30px 0}.media-list ul li .media-view{height:150px;background-color:#f0f0ee}.media-list ul li .media-view.shd img{-moz-box-shadow:0 0 3px rgba(0,0,0,0.7);-webkit-box-shadow:0 0 3px rgba(0,0,0,0.7)}.media-list ul li .action{background:#CCC;padding:5px;color:#FFF}.media-list ul li .action .move{float:left;width:11px;height:11px;margin-top:2px;background:url('../img/item-handle.png') no-repeat 0 0;cursor:pointer}.media-list ul li .action .move:hover{background:url('../img/item-handle.png') no-repeat 0 -11px}.media-list ul li .action .caption{display:none;float:left;width:15px;height:15px;margin:1px 0 0 2px;background:url('../img/caption-media.png') no-repeat 0 0;cursor:pointer}.media-list ul li .action .info{float:left;width:16px;height:16px;margin-left:10px;background:url('../img/info-tiny.png') no-repeat 0 0;cursor:pointer}.media-list ul li .action .remove{float:right;width:14px;height:14px;background:url('../img/remove-media.png') no-repeat 0 0;cursor:pointer}.media-list ul li .action .remove:hover{background:url('../img/remove-media.png') no-repeat 0 -14px}.media-list .editing{height:100px;background-color:#FFF;border:1px solid #ccc;border-bottom:0}.media-list .choosing{height:600px;background-color:#515151;border:1px solid #CCC;border-top:0}.contenttable-list .table{height:150px;overflow-y:auto}.contenttable-list .head{background:#f0f4f5;padding:3px;border:1px solid #ccc;border-bottom:0}.contenttable-list .head .search{float:left}.contenttable-list .head .search .field{float:left}.contenttable-list .head .search a{margin:6px 6px 0 2px;display:block;float:left;cursor:pointer}.contenttable-list .head .search a.more{padding-left:10px;font-weight:bold;cursor:pointer}.contenttable-list .head .open{float:right;margin-top:5px;color:#515151;font-size:11px;font-weight:bold;text-decoration:none}.contenttable-list .keyword{padding:3px;background:#f0f4f5;border:1px solid #ccc;border-bottom:0;list-style-type:none;margin:0}.contenttable-list .keyword .key{float:left;padding:3px 3px 3px 5px;margin-right:4px;font-size:10px;width:auto;-moz-border-radius:4px;-webkit-border-radius:4px;background:#d2d2d2;color:#808080}.contenttable-list .keyword .key .kill{width:10px;height:10px;background:url('../img/key-remove.png') no-repeat left bottom;text-indent:-5000px;display:block;float:right;margin:1px 3px 0 5px;cursor:pointer}.contenttable-list .keyword .key .edit{width:10px;height:10px;background:url('../img/key-edit.png') no-repeat left bottom;text-indent:-5000px;display:block;float:right;margin:1px 5px 0 10px;cursor:pointer}.contenttable-list .keyword .key .kill:hover,.contenttable-list .keyword .key .edit:hover{background-position:0 0}.contenttable-list .keyword .key:hover{background:#c8c8c8}.contenttable-list .keyword .keyholder{float:left;padding:3px 3px 3px 5px;margin-right:4px;font-size:10px;width:auto;-moz-border-radius:4px;-webkit-border-radius:4px;background:#cf6b00;color:#808080}.contenttable-list .tagListingSearch{padding:80px 0 80px 0;text-align:center;font-weight:bold;color:#515151}.panelItem{float:left}.panelItem .panelLabel,.panelItem .panelBody{display:block;width:95%;padding:0;margin:0 auto}.panelItem .panelLabel{border:1px solid #CCC;border-bottom:0;color:#333;background:#f0f0ee}.panelItem .panelLabel .name,.panelItem .panelLabel .action{padding:5px}.panelItem .panelLabel .name{float:left}.panelItem .panelLabel .action{float:right}.panelItem .panelLabel .action a{cursor:pointer}.panelItem .panelBody{border:1px solid #CCC}.panelItem .panelBody select{border:0}#app.data .tabset .tab .ui-sortable li{min-width:120px}#app.data .tabset .tab li.is-tab{min-width:60px}#app.data .tabset .tab li.right{float:right}#app.data .tabset .tab li.right-select{border:0;margin:0;padding:0}#app.data .tabset .tab li span.handle,#app.data .tabset .tab li span.edit,#app.data .tabset .tab li span.remove{display:none;float:right;text-indent:-5000px;opacity:.5}#app.data .tabset .tab li span.handle:hover,#app.data .tabset .tab li span.edit:hover,#app.data .tabset .tab li span.remove:hover{opacity:1}#app.data .tabset .tab li span.handle{width:11px;height:11px;margin-left:10px;background:url('../img/item-handle.png') no-repeat 0 -11px}#app.data .tabset .tab li span.edit{width:12px;height:12px;margin-left:5px;background:url('../img/tab-edit.png') no-repeat 0 0}#app.data .tabset .tab li span.remove{width:12px;height:12px;margin-left:5px;background:url('../img/tab-remove.png') no-repeat 0 0}#fade-wall{position:fixed;top:0;left:0;height:100%;width:100%;background:rgba(0,0,0,0.7)}#modal-upload .uploadcontainer{position:fixed;height:400px;width:600px;top:50%;left:50%;margin-top:-200px;margin-left:-300px;opacity:1;background:white;border:1px solid #444}.uploadcontainer{float:left;width:100%}.uploadcontainer .left{float:left;width:130px;height:150px;margin:5px;padding:10px}.uploadcontainer #uploadembed #queue{float:left;min-height:150px}
+.clearfix:after{content:".";display:block;clear:both;visibility:hidden;line-height:0;height:0}.clearfix{display:inline-block}html .clearfix{display:block}* html .clearfix{height:1%}#app.data{margin:0}.field-list{margin:0;padding:0;min-height:38px;display:block}.field-list .needToBeFilled label{color:#cf0400}.field-list label{float:left;width:14%;font-weight:bold;text-align:right;line-height:22px}.field-list label a{font-weight:normal;color:#000;text-decoration:none}.field-list .hand{float:left;width:2%;height:11px;visibility:hidden;margin:5px 0 0 0;background:url('../img/item-handle.png') no-repeat 5px -11px;cursor:pointer}.field-list .hand:hover{background:url('../img/item-handle.png') no-repeat 5px 0}.field-list .spacer{float:left;width:4%;height:1px}.field-list .toggle{float:left;margin:5px 0 0 0;width:2%;height:13px;background:url('../img/folder.png') no-repeat 0 -13px;cursor:pointer}.field-list .toggle-hidden{visibility:hidden}.field-list .display-off,.field-list .off{display:none}.field-list input,.field-list textarea{vertical-align:middle}.field-list input[type="text"]{height:18px;padding:0;margin:0 0 1px 0}.field-list select[multiple]{border-color:#ddd}.field-list input[disabled],.field-list textarea[disabled]{opacity:.5}.field-list li{width:100%;padding:7px 0 7px 0;border-bottom:1px solid #969696;background:#f5f5f5}.field-list li.closed .toggle{background:url('../img/folder.png') no-repeat 0 0}.field-list li.closed .form,.field-list li.closed .off,.field-list li.closed .spacer{display:none}.field-list li .off{display:inline}.field-list li .field{padding:2px;border:1px solid #CCC;outline:0}.field-list li .field:focus{border-color:#666}.field-list li:last-child{border-bottom:0}.field-list .form-item i.clear{margin:1px 0 0 3px;cursor:pointer}.field-list .form{float:right;width:81%;margin-right:5px}.field-list .form label{float:none;width:auto;font-weight:normal;text-align:inherit;padding:auto}.field-list .form div.label{padding:5px 0 5px 0}.field-list .form .panelItem:first-child .panelLabel,.field-list .form .panelItem:first-child .panelBody{float:left}.field-list .form .panelItem:last-child .panelLabel,.field-list .form .panelItem:last-child .panelBody{float:right}.field-list .instruction{float:right;width:81%;margin-right:5px;font-style:italic;color:#666}.media-list .media-header{border:1px solid #CCC;border-bottom:0;background:#f0f0ee;padding:5px}.media-list .media-header .left{float:left}.media-list .media-header .right{float:right}.media-list .media-header a{text-decoration:none;color:#515151;cursor:pointer}.media-list .media-footer{border:1px solid #CCC;border-top:0;background:#f0f0ee;padding:5px}.media-list .media-footer .left{float:left}.media-list .media-footer .right{float:right}.media-list .media-footer a{text-decoration:none;color:#515151;cursor:pointer;float:left;margin-top:1px}.media-list .media-footer img{vertical-align:middle;float:left;display:block}.media-list ul{background:#fff;border:1px solid #ccc;padding:5px 0 0 5px;margin:0}.media-list ul li{float:left;width:150px;margin:0 5px 5px 0;padding:0;border:0;background:0}.media-list ul li span.notfound{display:none}.media-list ul li.notFound span.notfound{float:right;width:16px;height:16px;margin-right:10px;background:url('../img/alert-tiny.png') no-repeat 0 0;cursor:pointer}.media-list ul li.noMedia{float:none;width:100%;text-align:center;color:#c8c8c8;font-size:14px;padding:30px 0 30px 0}.media-list ul li .media-view{height:150px;background-color:#f0f0ee}.media-list ul li .media-view.shd img{-moz-box-shadow:0 0 3px rgba(0,0,0,0.7);-webkit-box-shadow:0 0 3px rgba(0,0,0,0.7)}.media-list ul li .action{background:#CCC;padding:5px;color:#FFF}.media-list ul li .action .move{float:left;width:11px;height:11px;margin-top:2px;background:url('../img/item-handle.png') no-repeat 0 0;cursor:pointer}.media-list ul li .action .move:hover{background:url('../img/item-handle.png') no-repeat 0 -11px}.media-list ul li .action .caption{display:none;float:left;width:15px;height:15px;margin:1px 0 0 2px;background:url('../img/caption-media.png') no-repeat 0 0;cursor:pointer}.media-list ul li .action .info{float:left;width:16px;height:16px;margin-left:10px;background:url('../img/info-tiny.png') no-repeat 0 0;cursor:pointer}.media-list ul li .action .remove{float:right;width:14px;height:14px;background:url('../img/remove-media.png') no-repeat 0 0;cursor:pointer}.media-list ul li .action .remove:hover{background:url('../img/remove-media.png') no-repeat 0 -14px}.media-list .editing{height:100px;background-color:#FFF;border:1px solid #ccc;border-bottom:0}.media-list .choosing{height:600px;background-color:#515151;border:1px solid #CCC;border-top:0}.contenttable-list .table{height:150px;overflow-y:auto}.contenttable-list .head{background:#f0f4f5;padding:3px;border:1px solid #ccc;border-bottom:0}.contenttable-list .head .search{float:left}.contenttable-list .head .search .field{float:left}.contenttable-list .head .search a{margin:6px 6px 0 2px;display:block;float:left;cursor:pointer}.contenttable-list .head .search a.more{padding-left:10px;font-weight:bold;cursor:pointer}.contenttable-list .head .open{float:right;margin-top:5px;color:#515151;font-size:11px;font-weight:bold;text-decoration:none}.contenttable-list .keyword{padding:3px;background:#f0f4f5;border:1px solid #ccc;border-bottom:0;list-style-type:none;margin:0}.contenttable-list .keyword .key{float:left;padding:3px 3px 3px 5px;margin-right:4px;font-size:10px;width:auto;-moz-border-radius:4px;-webkit-border-radius:4px;background:#d2d2d2;color:#808080}.contenttable-list .keyword .key .kill{width:10px;height:10px;background:url('../img/key-remove.png') no-repeat left bottom;text-indent:-5000px;display:block;float:right;margin:1px 3px 0 5px;cursor:pointer}.contenttable-list .keyword .key .edit{width:10px;height:10px;background:url('../img/key-edit.png') no-repeat left bottom;text-indent:-5000px;display:block;float:right;margin:1px 5px 0 10px;cursor:pointer}.contenttable-list .keyword .key .kill:hover,.contenttable-list .keyword .key .edit:hover{background-position:0 0}.contenttable-list .keyword .key:hover{background:#c8c8c8}.contenttable-list .keyword .keyholder{float:left;padding:3px 3px 3px 5px;margin-right:4px;font-size:10px;width:auto;-moz-border-radius:4px;-webkit-border-radius:4px;background:#cf6b00;color:#808080}.contenttable-list .tagListingSearch{padding:80px 0 80px 0;text-align:center;font-weight:bold;color:#515151}.panelItem{float:left}.panelItem .panelLabel,.panelItem .panelBody{display:block;width:100%;padding:0;margin:0 auto}.panelItem .panelLabel{border:1px solid #CCC;border-bottom:0;color:#333;background:#f0f0ee}.panelItem .panelLabel .name,.panelItem .panelLabel .action{padding:5px}.panelItem .panelLabel .name{float:left}.panelItem .panelLabel .action{float:right}.panelItem .panelLabel .action a{cursor:pointer}.panelItem .panelBody{border:1px solid #CCC}.panelItem .panelBody select{border:0}#app.data .tabset .tab .ui-sortable li{min-width:120px}#app.data .tabset .tab li.is-tab{min-width:60px}#app.data .tabset .tab li.right{float:right}#app.data .tabset .tab li.right-select{border:0;margin:0;padding:0}#app.data .tabset .tab li span.handle,#app.data .tabset .tab li span.edit,#app.data .tabset .tab li span.remove{display:none;float:right;text-indent:-5000px;opacity:.5}#app.data .tabset .tab li span.handle:hover,#app.data .tabset .tab li span.edit:hover,#app.data .tabset .tab li span.remove:hover{opacity:1}#app.data .tabset .tab li span.handle{width:11px;height:11px;margin-left:10px;background:url('../img/item-handle.png') no-repeat 0 -11px}#app.data .tabset .tab li span.edit{width:12px;height:12px;margin-left:5px;background:url('../img/tab-edit.png') no-repeat 0 0}#app.data .tabset .tab li span.remove{width:12px;height:12px;margin-left:5px;background:url('../img/tab-remove.png') no-repeat 0 0}#fade-wall{position:fixed;top:0;left:0;height:100%;width:100%;background:rgba(0,0,0,0.7)}#modal-upload .uploadcontainer{position:fixed;height:400px;width:600px;top:50%;left:50%;margin-top:-200px;margin-left:-300px;opacity:1;background:white;border:1px solid #444}.uploadcontainer{float:left;width:100%}.uploadcontainer .left{float:left;width:130px;height:150px;margin:5px;padding:10px}.uploadcontainer #uploadembed #queue{float:left;min-height:150px}
