@@ -355,12 +355,12 @@
 	}
 }
 
-// Les SELECT MULIPLE qui affiche les groupes / chapter / category / shop / forum
+// Les SELECT MULIPLE qui affichent les groupes / chapter / category / shop / forum
 .panelItem{
 	float: left;
 
 	.panelLabel, .panelBody {
-		display: block; width: 95%;
+		display: block; width: 100%;
 		padding: 0px; margin: 0 auto;
 	}
 
