@@ -3,8 +3,8 @@
 
 	<data>
 		<key>type</key>
-		<version>5.2.1</version>
-        <lastMod>2013-03-15</lastMod>
+		<version>5.2.2</version>
+        <lastMod>2013-05-11</lastMod>
 		<install>YES</install>
         <menu>NO</menu>
 		<name><![CDATA[Type]]></name>
@@ -12,7 +12,7 @@
 
     <i18n>
         <file>row.php</file>
-        <file>type.php</file>
+        <file>index.php</file>
     </i18n>
 
     <locale language="fr_FR">
