@@ -4,6 +4,9 @@ Kodeine Change log
 * = Autre / Divers / Inclassable...
 
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+2013-05-11
++ Fix certaines URL + CSS mineur
+
 2013-03-15
 + Deplacement de la gestion des type dans le module
 
